--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <p>Hello, world!</p>
     <script src="js/script.js"></script>
+    <h1>Hey, guys</h1>
+    <p>У меня все найс!</p>
 </body>
 </html>
